# Brotherizer

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  brotherize.py  ingest_roots.json  pyproject.toml
.runtime/: brotherizer.env.example
RESEARCH/: BUILDING_DATABASES.md  CONTRIBUTING.md  DONOR_PACKS.md  LANGUAGE_COVERAGE.md  PROVIDERS.md  README.md  SAFETY_AND_SANITIZATION.md  SHIPPED_VS_NOT_SHIPPED.md  STYLE_RADAR.md  pack-schema.example.ndjson
api/: __init__.py  brotherizer_api.py
brotherizer_assets/: __init__.py
collectors/: bluesky_post_collector.py  donor_pack_builder.py  forum_thread_collector.py  hn_comment_collector.py  perplexity_source_discovery.py  public_web_text_collector.py  style_chunker.py  youtube_comments_collector.py
configs/: apify_brotherizer_seed_urls.json  apify_presets.json  apify_reddit_comments_input.example.json  apify_website_content_crawler_input.example.json  apify_x_english_banter_input.json  apify_x_posts_input.example.json  apify_x_ptbr_reaction_input.json  benchmark_cases_focus.json  benchmark_cases_priority.json  benchmark_cases_priority_modes.json  benchmark_cases_v1.json  bluesky_english_targets.example.json  forum_english_targets.example.json  forum_ptbr_targets.example.json  source_targets.example.json
data/: benchmarks_benchmark_v1.json
docs/: PATHOS.md  README.md  benchmark-raw-v2.json  benchmark-summary-priority.json  benchmark-summary-v1.json  benchmark-summary-v2.json  benchmark-summary-v3.json  brotherizer-corpus-acquisition-plan-2026-04-01.md  brotherizer-deep-research-2026-04-01.md  brotherizer-english-corpus-strategy-2026-04-01.md  brotherizer-l1ght-checkpoint-2026-04-02.md  brotherizer-model-routing-2026-04-02.md  brotherizer-operations-map-2026-04-02.md
integrations/: __init__.py  apify_actor_runner.py  apify_ingest_pipeline.py  apify_to_brotherizer.py  (+2 more)
ui/: app.css  (+7 more)
(+75 files in other folders)
